--- a/starter/02-HTML-Fundamentals/component.html
+++ b/starter/02-HTML-Fundamentals/component.html
@@ -2,26 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./style-component.css" />
     <title>component</title>
   </head>
   <body>
-    <article>
-      <h2>Converse Chuck Taylor All Star Low Top</h2>
+    <article class="product">
+      <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
       <img src="./img/challenges.jpg" alt="a shoe" width="250" height="250" />
-      <p><strong>$65.00</strong></p>
-      <p>Free shipping</p>
+      <p class="price"><strong>$65.00</strong></p>
+      <p class="shipping">Free shipping</p>
       <p>
         Ready to dress up or down, these classic canvas Chucks are an everyday
         wardrobe staple.
       </p>
-      <a href="#">more information &rarr;</a>
-      <h3>Product detatils</h3>
-      <ul>
+      <a href="#" class="more-info">More information &rarr;</a>
+      <h3 class="details-title">Product detatils</h3>
+      <ul class="details-list">
         <li>Lightweight, durable canvas sneaker</li>
         <li>Lightly padded footbed for added comfort</li>
         <li>Iconic Chuck Taylor ankle patch</li>
       </ul>
-      <button>add to cart</button>
+      <button class="add-cart">add to cart</button>
     </article>
   </body>
 </html>
