--- a/starter/02-HTML-Fundamentals/index.html
+++ b/starter/02-HTML-Fundamentals/index.html
@@ -6,7 +6,7 @@
     <title>The Basic Language of the Web</title>
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <h1>📘 The Code Magazine</h1>
       <a href="blog.html">Blog</a>
       <a href="#">Chalanges</a>
@@ -22,7 +22,7 @@
           width="50"
           height="50"
         />
-        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <p id="author">Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
         <img
           src="./img/post-img.jpg"
           alt="HTML code on a screen"
@@ -58,7 +58,7 @@
           href="https://developer.mozilla.org/en-US/docs/Web/HTML"
           target="_blank"
           >MDN Web Docs</a
-        >.
+        >
       </p>
       <h3>Why should you learn HTML?</h3>
 
@@ -81,7 +81,7 @@
     </article>
     <aside>
       <h4>Related Posts</h4>
-      <ul>
+      <ul id="posts">
         <li>
           <img
             src="./img/related-1.jpg"
@@ -90,7 +90,7 @@
             height="75"
           />
           <a href="#">How to Learn Web Development</a>
-          <p>By Jonas Schmedmedtmann</p>
+          <p class="related-author">By Jonas Schmedmedtmann</p>
         </li>
 
         <li>
@@ -101,7 +101,7 @@
             height="75"
           />
           <a href="#">The Unknown Power of CCS</a>
-          <p>By Jim Dillon</p>
+          <p class="related-author">By Jim Dillon</p>
         </li>
 
         <li>
@@ -112,10 +112,10 @@
             height="75"
           />
           <a href="#">Why Javasecript is Awsome</a>
-          <p>By Matilda</p>
+          <p class="related-author">By Matilda</p>
         </li>
       </ul>
     </aside>
-    <footer>Copyright &copy; 2027 by The Code Magazine</footer>
+    <footer><p id="copyright" class="copyright text">Copyright &copy; 2027 by The Code Magazine</p></Copyright></footer>
   </body>
 </html>
