complete lesson 011 from chapter 4.

--- a/starter/04-CSS-Layouts/flexbox.html
+++ b/starter/04-CSS-Layouts/flexbox.html
@@ -36,10 +36,18 @@
         /* STARTER */
         font-family: sans-serif;
         background-color: #ddd;
-        font-size: 40px;
+        font-size: 30px;
         margin: 40px;
 
         /* FLEXBOX */
+        display: flex;
+        align-items: center;
+        gap: 30px;
+      }
+
+      .el {
+        flex-basis: 300px;
+        flex-shrink: 0;
       }
     </style>
   </head>
