--- a/starter/04-CSS-Layouts/flexbox.html
+++ b/starter/04-CSS-Layouts/flexbox.html
@@ -30,6 +30,7 @@
       }
       .el--8 {
         background-color: crimson;
+        padding-bottom: 10px;
       }
 
       .container {
@@ -40,14 +41,9 @@
         margin: 40px;
 
         /* FLEXBOX */
-        display: flex;
-        align-items: center;
-        gap: 30px;
       }
 
       .el {
-        flex-basis: 300px;
-        flex-shrink: 0;
       }
     </style>
   </head>
